Fixed navbar entering on safari

--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,6 @@ i {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  white-space: pre;
 }
 
 .nav-name {
